@@ -19,7 +19,6 @@ base {
 java.toolchain.languageVersion = JavaLanguageVersion.of(21)
 
 neoForge {
-    // Specify the version of NeoForge to use.
     version = project.neo_version
 
     parchment {
@@ -27,11 +26,6 @@ neoForge {
         minecraftVersion = project.parchment_minecraft_version
     }
 
-    // This line is optional. Access Transformers are automatically detected
-    // accessTransformers.add('src/main/resources/META-INF/accesstransformer.cfg')
-
-    // Default run configurations.
-    // These can be tweaked, removed, or duplicated as needed.
     runs {
         client {
             client()
@@ -73,6 +67,8 @@ neoForge {
             // "REGISTRYDUMP": For getting the contents of all registries.
             systemProperty 'forge.logging.markers', 'REGISTRIES'
 
+            jvmArguments.addAll '--enable-preview'
+
             // Recommended logging level for the console
             // You can set various levels here.
             // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
@@ -81,19 +77,19 @@ neoForge {
     }
 
     mods {
-        // define mod <-> source bindings
-        // these are used to tell the game which sources are for which mod
-        // mostly optional in a single mod project
-        // but multi mod projects should define one per mod
         "${mod_id}" {
             sourceSet(sourceSets.main)
         }
     }
 }
 
-// Include resources generated by data generators.
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 
+tasks.named('compileJava', JavaCompile) {
+    options.compilerArgs += [
+            '--enable-preview'
+    ]
+}
 
 dependencies {
     // Example mod dependency with JEI
@@ -116,7 +112,7 @@ dependencies {
         exclude group: "org.sinytra.forgified-fabric-api", module: "fabric-rendering-data-attachment-v1"
         exclude group: "org.sinytra.forgified-fabric-api", module: "fabric-block-view-api-v2"
     }
-
+    implementation 'io.github.jaredmdobson:concentus:1.0.2'
     // Example mod dependency using a mod jar from ./libs with a flat dir repository
     // This maps to ./libs/coolmod-${mc_version}-${coolmod_version}.jar
     // The group id is ignored when searching -- in this case, it is "blank"
